Code Cleanup : Add Apache String Utils to make the code cleaner